--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                                                         <div class="redes-c">
                                                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                                 class="d-flex justify-content-center g-2 w-layout-grid footer-social-list">
-                                                                <a href="https://www.facebook.com/dentalidcuu/"
+                                                                <!-- <a href="https://www.facebook.com/dentalidcuu/"
                                                                     class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/facebook-white.webp"
@@ -614,7 +614,7 @@
                                                                     <img src="./assets/linkedin-white.webp"
                                                                         loading="lazy" width="24px" height="24px"
                                                                         alt="LinkedIn Icon" class="icon-1x1-small" />
-                                                                </a>
+                                                                </a> -->
                                                             </div>
                                                         </div>
                                                     </div>
@@ -649,7 +649,7 @@
                                                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                                 class="d-flex justify-content-center g-2"
                                                                 class="w-layout-grid footer-social-list">
-                                                                <a href="https://www.facebook.com/dentalidcuu/"
+                                                                <!-- <a href="https://www.facebook.com/dentalidcuu/"
                                                                     class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/facebook-white.webp"
@@ -662,8 +662,8 @@
                                                                     <img src="./assets/instagram-white.webp"
                                                                         loading="lazy" alt="Instagram Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
-                                                                </a>
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                </a> -->
+                                                                <a href="https://www.linkedin.com/in/fermin-javier-oca%C3%B1as-pe%C3%B1a-88a677213/" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/linkedin-white.webp"
                                                                         loading="lazy" width="24px" height="24px"
@@ -707,21 +707,21 @@
                                                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                                 class="d-flex justify-content-center g-2"
                                                                 class="w-layout-grid footer-social-list">
-                                                                <a href="https://www.facebook.com/dentalidcuu/"
+                                                                <!-- <a href="https://www.facebook.com/dentalidcuu/"
                                                                     class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/facebook-white.webp"
                                                                         loading="lazy" alt="Facebook Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
-                                                                </a>
-                                                                <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
+                                                                </a> -->
+                                                                <a href="https://www.instagram.com/theodvg/?hl=es-la"
                                                                     class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/instagram-white.webp"
                                                                         loading="lazy" alt="Instagram Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
                                                                 </a>
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                <a href="https://www.linkedin.com/in/oscar-vizcarra-a71717205/" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/linkedin-white.webp"
                                                                         loading="lazy" width="24px" height="24px"
@@ -779,12 +779,12 @@
                                                                         loading="lazy" alt="Instagram Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
                                                                 </a>
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                <!-- <a href="#" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/linkedin-white.webp"
                                                                         loading="lazy" alt="LinkedIn Icon"
                                                                         class="icon-1x1-small" />
-                                                                </a>
+                                                                </a> -->
                                                             </div>
 
                                                         </div>
@@ -824,19 +824,19 @@
                                                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                                 class="d-flex justify-content-center redes-c-gap"
                                                                 class="w-layout-grid footer-social-list">
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                <!-- <a href="#" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/facebook-white.webp"
                                                                         loading="lazy" alt="Facebook Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
-                                                                </a>
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                </a> -->
+                                                                <a href="https://www.instagram.com/calixtoarellano/?hl=es-la" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/instagram-white.webp"
                                                                         loading="lazy" alt="Instagram Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
                                                                 </a>
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                <a href="https://www.linkedin.com/in/calixto-arellano-a1843951/" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/linkedin-white.webp"
                                                                         loading="lazy" alt="LinkedIn Icon"
@@ -882,24 +882,24 @@
                                                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                                 class="d-flex justify-content-center g-2"
                                                                 class="w-layout-grid footer-social-list">
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                <!-- <a href="#" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/facebook-white.webp"
                                                                         loading="lazy" alt="Facebook Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
-                                                                </a>
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                </a> -->
+                                                                <a href="https://www.instagram.com/nestorschejtman/?hl=es-la" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/instagram-white.webp"
                                                                         loading="lazy" alt="Instagram Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
-                                                                </a>
+                                                                <!-- </a>
                                                                 <a href="#" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/linkedin-white.webp"
                                                                         loading="lazy" alt="LinkedIn Icon"
                                                                         class="icon-1x1-small" />
-                                                                </a>
+                                                                </a> -->
                                                             </div>
 
                                                         </div>
@@ -940,24 +940,24 @@
                                                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                                 class="d-flex justify-content-center g-2"
                                                                 class="w-layout-grid footer-social-list">
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                <!-- <a href="#" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/facebook-white.webp"
                                                                         loading="lazy" alt="Facebook Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
-                                                                </a>
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                </a> -->
+                                                                <a href="https://www.instagram.com/leonardorogel_dentceram/?hl=es-la" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/instagram-white.webp"
                                                                         loading="lazy" alt="Instagram Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
                                                                 </a>
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                <!-- <a href="#" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/linkedin-white.webp"
                                                                         loading="lazy" alt="LinkedIn Icon"
                                                                         class="icon-1x1-small" />
-                                                                </a>
+                                                                </a> -->
                                                             </div>
 
                                                         </div>
@@ -1001,7 +1001,7 @@
                                                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                                 class="d-flex justify-content-center g-2"
                                                                 class="w-layout-grid footer-social-list">
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                <!-- <a href="#" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/facebook-white.webp"
                                                                         loading="lazy" alt="Facebook Icon"
@@ -1018,7 +1018,7 @@
                                                                     <img src="./assets/linkedin-white.webp"
                                                                         loading="lazy" alt="LinkedIn Icon"
                                                                         class="icon-1x1-small" />
-                                                                </a>
+                                                                </a> -->
                                                             </div>
 
                                                         </div>
