--- a/index.html
+++ b/index.html
@@ -893,13 +893,13 @@
                                                                     <img src="./assets/instagram-white.webp"
                                                                         loading="lazy" alt="Instagram Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
-                                                                <!-- </a>
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                </a>
+                                                                <!-- <a href="#" class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/linkedin-white.webp"
                                                                         loading="lazy" alt="LinkedIn Icon"
                                                                         class="icon-1x1-small" />
-                                                                </a> -->
+                                                                </a>  -->
                                                             </div>
 
                                                         </div>
