--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                                         </div>
                                         <!-- cuenta regresiva INICIO -->
                                         <div>
-                                            <h4 class="mt-5 fs-5">Días hasta el evento</h4>
+                                            <h4 class="mt-5 fs-5">Días hasta el evento:</h4>
                                         </div>
                                         <div class="countdown-container mt-2 pt-2">
                                             <div class="time-circle" id="days-circle">
@@ -796,7 +796,7 @@
 
                                         </div>
                                     </div>
-                                    <div role="listitem" class="speaker-collection-item w-dyn-item">
+                                    <!-- <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="./assets/dr-calixto.webp" loading="lazy"
@@ -831,7 +831,7 @@
                                                                         loading="lazy" alt="Facebook Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
                                                                 </a> -->
-                                                            <a href="https://www.instagram.com/calixtoarellano/?hl=es-la"
+                                                            <!-- <a href="https://www.instagram.com/calixtoarellano/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/instagram-white.webp" loading="lazy"
@@ -852,7 +852,7 @@
                                             </div>
 
                                         </div>
-                                    </div>
+                                    </div>  -->
 
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
@@ -1232,11 +1232,16 @@
                                             <div> 19:30 - 23:00 pm</div>
                                         </div>
                                         <div id="w-node-e76cb932-36d5-1daa-65da-f00d3ca37b0d-3863c98b"
-                                            class="agenda-content2">
+                                            class="agenda-content">
                                             <div class="margin-bottom ">
                                                 <h3>Fiesta Rompe Hielos *</h3>
+                                                <div id="arrow" class="mobile-notice">
+                                                    &rarr;
+                                                </div>
                                             </div>
-                                            <p class=""></p>
+                                        </div>
+                                        <div class="additional-info">
+                                            <p>* El costo del boleto no cubre el acceso al evento rompehielos.</p>
                                         </div>
                                     </div>
                                     <h1 class="text-center text-md-start">Día 2</h1>
@@ -1593,11 +1598,6 @@
                                                         alt="Instagram Icon" width="24px" height="24px"
                                                         class="icon-1x1-small icon-redes" />
                                                 </a>
-                                                <a href="#" class="footer-social-link" target="_blank">
-                                                    <img src="./assets/linkedin.webp" loading="lazy" width="24px"
-                                                        height="24px" alt="LinkedIn Icon"
-                                                        class="icon-1x1-small icon-redes" />
-                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -1619,11 +1619,6 @@
                                                     class="footer-social-link" target="_blank">
                                                     <img src="./assets/instagram.webp" loading="lazy"
                                                         alt="Instagram Icon" width="24px" height="24px"
-                                                        class="icon-1x1-small icon-redes" />
-                                                </a>
-                                                <a href="#" class="footer-social-link" target="_blank">
-                                                    <img src="./assets/linkedin.webp" loading="lazy" width="24px"
-                                                        height="24px" alt="LinkedIn Icon"
                                                         class="icon-1x1-small icon-redes" />
                                                 </a>
                                             </div>
