Agregar dr tonali

--- a/index.html
+++ b/index.html
@@ -796,30 +796,20 @@
 
                                         </div>
                                     </div>
-                                    <!-- <div role="listitem" class="speaker-collection-item w-dyn-item">
+                                    <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
-                                                <img src="./assets/dr-calixto.webp" loading="lazy"
-                                                    alt="Dr. Floriberto Calixto Arellanos"
+                                                <img src="./assets/drTonali.png" loading="lazy"
+                                                    alt="Dr. Tonali Vázquez"
                                                     class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
-                                                <div class="heading-style-h4 title-dr">Dr. Floriberto Calixto
-                                                    Arellanos
+                                                <div class="heading-style-h4 title-dr">Dr. Tonali Vázquez
                                                 </div>
-                                                <div class="text-size-medium">Rehabilitación Oral e Implantología
+                                                <div class="text-size-medium">Cirujano Dentista
                                                 </div>
                                                 <div class="speaker-bio-content">
-                                                    <p class="text-bio">Dr. Floriberto Calixto Arellano es un
-                                                        estomatólogo especializado en operatoria dental,
-                                                        prostodoncia e
-                                                        implantología. Graduado de la BUAP con una licenciatura y
-                                                        maestría en ciencias en estomatología integral, ha realizado
-                                                        diplomados y certificaciones internacionales en periodoncia,
-                                                        implantología, y adhesivos dentales. Desde 2003, combina su
-                                                        práctica privada con su rol como profesor investigador en la
-                                                        Facultad de Estomatología de la BUAP. También ha sido asesor
-                                                        científico externo para Ivoclar Vivadent y Kuraray - MDC.
+                                                    <p class="text-bio">El Dr. Tonali Vázquez es un profesional con una experiencia significativa en el ámbito de la ingeniería y gestión de proyectos. Cuenta con una formación académica sólida y ha desempeñado roles claves en diferentes organizaciones, lo que le ha permitido desarrollar habilidades técnicas y de liderazgo. Entre sus logros destacados se encuentran la implementación de sistemas innovadores y la mejora de procesos operativos que han generado resultados positivos en eficiencia y productividad.
                                                     </p>
                                                     <div class="redes-c ">
                                                         <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
@@ -831,14 +821,14 @@
                                                                         loading="lazy" alt="Facebook Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
                                                                 </a> -->
-                                                            <!-- <a href="https://www.instagram.com/calixtoarellano/?hl=es-la"
+                                                            <a href="https://www.instagram.com/dr.tonalivazquez/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/instagram-white.webp" loading="lazy"
                                                                     alt="Instagram Icon" width="24px" height="24px"
                                                                     class="icon-1x1-small" />
                                                             </a>
-                                                            <a href="https://www.linkedin.com/in/calixto-arellano-a1843951/"
+                                                            <a href="https://www.linkedin.com/in/a-tonali-v%C3%A1zquez-s-017425161/"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/linkedin-white.webp" loading="lazy"
@@ -852,7 +842,7 @@
                                             </div>
 
                                         </div>
-                                    </div>  -->
+                                    </div> 
 
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
