--- a/index.html
+++ b/index.html
@@ -494,12 +494,7 @@
                                         <h2 class="heading-style-h3">Descubre cómo la odontología no solo transforma
                                             sonrisas.</h2>
                                         <div class="margin-top margin-small">
-                                            <p class="text-size-medium">Es un evento dental, enfocado a dentistas
-                                                generales,
-                                                técnicos dentales y especialistas que están interesados en capacitarse y
-                                                mejorar sus servicios y conocimiento. Contaremos con la presencia de
-                                                diversos ponentes altamente capacitados, este busca ser un evento
-                                                representativo del estado de chihuahua en el área dental.</p>
+                                            <p class="text-size-medium">Este evento dental está diseñado para dentistas generales, técnicos dentales y especialistas interesados en ampliar sus conocimientos y mejorar la calidad de sus servicios. Contaremos con la participación de destacados ponentes altamente capacitados, quienes ofrecerán presentaciones y talleres especializados. El objetivo es establecer un encuentro representativo para la comunidad dental en el estado de Chihuahua, promoviendo el desarrollo profesional y la excelencia en el área.</p>
                                         </div>
 
 
@@ -1107,7 +1102,7 @@
                                             <div id="w-node-_092b5cf7-288f-355b-4821-e2dbff1fb160-3863c98b"
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
-                                                    <h3>Conferencia #1</h3>
+                                                    <h3>Tópicos en restauraciones adheridas directas e indirectas posteriores</h3>
                                                     <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
@@ -1256,7 +1251,7 @@
                                             <div id="w-node-e34d5b91-3aba-9615-b8b6-6bf9c5b3e11a-3863c98b"
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
-                                                    <h3>Conferencia #1</h3>
+                                                    <h3>Incorpora eficazmente el flujo digital en la ortodoncia</h3>
                                                     <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
