--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="preload" href="styles/index.css" as="style">
     <link rel="stylesheet" href="styles/index.css">
     <style>
+        .alerta-form {
+            color: white;
+        }
+
         @media (min-width: 992px) {
             html.w-mod-js:not(.w-mod-ix) [data-w-id="7790c7f5-e606-0e16-7ece-290f34840e59"] {
                 opacity: 0;
@@ -494,7 +498,14 @@
                                         <h2 class="heading-style-h3">Descubre cómo la odontología no solo transforma
                                             sonrisas.</h2>
                                         <div class="margin-top margin-small">
-                                            <p class="text-size-medium">Este evento dental está diseñado para dentistas generales, técnicos dentales y especialistas interesados en ampliar sus conocimientos y mejorar la calidad de sus servicios. Contaremos con la participación de destacados ponentes altamente capacitados, quienes ofrecerán presentaciones y talleres especializados. El objetivo es establecer un encuentro representativo para la comunidad dental en el estado de Chihuahua, promoviendo el desarrollo profesional y la excelencia en el área.</p>
+                                            <p class="text-size-medium">Este evento dental está diseñado para dentistas
+                                                generales, técnicos dentales y especialistas interesados en ampliar sus
+                                                conocimientos y mejorar la calidad de sus servicios. Contaremos con la
+                                                participación de destacados ponentes altamente capacitados, quienes
+                                                ofrecerán presentaciones y talleres especializados. El objetivo es
+                                                establecer un encuentro representativo para la comunidad dental en el
+                                                estado de Chihuahua, promoviendo el desarrollo profesional y la
+                                                excelencia en el área.</p>
                                         </div>
 
 
@@ -1102,7 +1113,8 @@
                                             <div id="w-node-_092b5cf7-288f-355b-4821-e2dbff1fb160-3863c98b"
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
-                                                    <h3>Tópicos en restauraciones adheridas directas e indirectas posteriores</h3>
+                                                    <h3>Tópicos en restauraciones adheridas directas e indirectas
+                                                        posteriores</h3>
                                                     <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
